<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:background="@drawable/back"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:id="@+id/tips_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/userinfo_cover"
                android:adjustViewBounds="true"/>
            <TextView
                android:textSize="15sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="恭喜！您已获得50000元贷款额度，请完善信息进行申领"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/teal_200"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="十年信誉"
                    android:layout_weight="1"/>
                <TextView
                    android:textColor="@color/teal_200"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="极速到账"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <EditText
        android:id="@+id/username"
        android:layout_width="320dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        android:hint="@string/prompt_name"
        android:selectAllOnFocus="true"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tips_card"/>
    <EditText
        android:id="@+id/id_card"
        android:layout_width="320dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        android:hint="@string/prompt_id_card"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:imeActionLabel="@string/action_sign_in_short"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"/>
    <EditText
        android:id="@+id/bank_card"
        android:layout_width="320dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        android:hint="@string/prompt_bank_card"
        android:selectAllOnFocus="true"
        android:inputType="number"
        android:imeOptions="actionDone"
        android:imeActionLabel="@string/action_sign_in_short"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_card"/>
    <Button
        android:enabled="false"
        android:layout_gravity="start"
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bank_card"
        app:layout_constraintVertical_bias="0.05"/>
    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        layout="@layout/activity_foot"/>
</androidx.constraintlayout.widget.ConstraintLayout>
